[gd_scene load_steps=10 format=3 uid="uid://dyx2ahtopf24g"]

[ext_resource type="PackedScene" uid="uid://kn4un6yv7630" path="res://scenes/base/view/view.tscn" id="1"]
[ext_resource type="Script" uid="uid://bgq4d6qhrqo0h" path="res://scenes/views/game/game.gd" id="2"]
[ext_resource type="LabelSettings" uid="uid://bfmg4ke5qx0j7" path="res://shared/label_settings/medium_label_settings.tres" id="3_8ytot"]
[ext_resource type="PackedScene" uid="uid://dy63hudg53cqc" path="res://scenes/nodes/views/ui_button/ui_button.tscn" id="4_8ytot"]
[ext_resource type="Texture2D" uid="uid://c4wtdt1we6yq7" path="res://scenes/views/game/shoot_icon_1.png" id="5_wywps"]
[ext_resource type="Texture2D" uid="uid://cf2qolwkb8dkl" path="res://scenes/views/game/strike_icon_1.png" id="6_sd2ii"]
[ext_resource type="Texture2D" uid="uid://kpd5uq8flp03" path="res://scenes/views/game/shield_icon_1.png" id="7_sd2ii"]
[ext_resource type="Texture2D" uid="uid://cn0rlwgevg52t" path="res://shared/icons/play_icon.png" id="8_qkv02"]
[ext_resource type="Texture2D" uid="uid://dlqlhcia6jc8w" path="res://shared/icons/menu_icon.png" id="9_6efes"]

[node name="Game" instance=ExtResource("1")]
script = ExtResource("2")

[node name="UpgradesContainer" type="CenterContainer" parent="CanvasLayer" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UpgradesContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="Label" type="Label" parent="CanvasLayer/UpgradesContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Upgrades"
label_settings = ExtResource("3_8ytot")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UpgradesContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 42
alignment = 1

[node name="Shoot" parent="CanvasLayer/UpgradesContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource("4_8ytot")]
layout_mode = 2
toggle_mode = true
action_mode = 0
text = ""
icon = ExtResource("5_wywps")
icon_alignment = 1

[node name="Strike" parent="CanvasLayer/UpgradesContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource("4_8ytot")]
layout_mode = 2
toggle_mode = true
action_mode = 0
text = ""
icon = ExtResource("6_sd2ii")
icon_alignment = 1

[node name="Shield" parent="CanvasLayer/UpgradesContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource("4_8ytot")]
layout_mode = 2
toggle_mode = true
action_mode = 0
text = ""
icon = ExtResource("7_sd2ii")
icon_alignment = 1

[node name="Play" parent="CanvasLayer/UpgradesContainer/VBoxContainer" index="2" instance=ExtResource("4_8ytot")]
layout_mode = 2
text = ""
icon = ExtResource("8_qkv02")
icon_alignment = 1

[node name="Back" parent="CanvasLayer/UpgradesContainer/VBoxContainer" index="3" instance=ExtResource("4_8ytot")]
layout_mode = 2
text = ""
icon = ExtResource("9_6efes")
icon_alignment = 1

[connection signal="toggled" from="CanvasLayer/UpgradesContainer/VBoxContainer/HBoxContainer/Shoot" to="." method="_on_shoot_toggled"]
[connection signal="toggled" from="CanvasLayer/UpgradesContainer/VBoxContainer/HBoxContainer/Strike" to="." method="_on_strike_toggled"]
[connection signal="toggled" from="CanvasLayer/UpgradesContainer/VBoxContainer/HBoxContainer/Shield" to="." method="_on_shield_toggled"]
[connection signal="pressed" from="CanvasLayer/UpgradesContainer/VBoxContainer/Play" to="." method="_on_view_started"]
[connection signal="pressed" from="CanvasLayer/UpgradesContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
